kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clm-admin
  namespace: NAMESPACE_PLACEHOLDER
spec:
  selector:
    app: clm-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
